# Allen_Wang_miniproj_8

./: Cargo.toml  Makefile  README.md  Titanic Profiling Report.md  main.py  requirements.txt  test_main.py
.github/workflows/: CICD.yml  rust.yml
src/: lib.rs  main.rs
tests/: test.rs
