[package]
name = "data_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"  # For reading CSV files
ndarray = "0.15"  # For numerical data manipulation
reqwest = { version = "0.11", features = ["json"] }  # For HTTP requests
tokio = { version = "1", features = ["full"] }  # For async runtime
sys-info = "0.9"  